# loco_cmake

./: .cmake-format.py  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Index.cmake  README.md  requirements.txt
.github/workflows/: ci-linux.yml  ci-windows.yml
cmake/: CheckSIMD.cmake  Common.cmake  LocoCheckSIMD.cmake  LocoConfigureProject.cmake  LocoSetupCompilerFlags.cmake  LocoSetupProject.cmake  LocoUtils.cmake  SetupCompiler.cmake  SetupDocs.cmake  SetupProject.cmake  SetupTarget.cmake  Utilities.cmake  check_simd_x86.cpp
cmake/finders/: FindSphinx.cmake
examples/: README.md
examples/dependencies/: CMakeLists.txt
examples/docs-doxygen/: CMakeLists.txt
examples/docs-doxygen/impl/: types_impl.hpp
examples/docs-doxygen/inc/: types.hpp
examples/docs-doxygen/include/: animal.hpp
examples/docs-doxygen/source/: animal.cpp
examples/docs-doxygen/src/: types.cpp
examples/docs-sphinx/: .gitignore  CMakeLists.txt
examples/docs-sphinx/docs/: .gitignore  conf.py  conf.py.in  index.rst
examples/find-or-fetch/: CMakeLists.txt
examples/find-or-fetch-system/: CMakeLists.txt
examples/project/: CMakeLists.txt
examples/simd/: CMakeLists.txt
examples/simd/src/: sample.cc
examples/utils/: CMakeLists.txt  sample_exec.cpp  sample_lib.cpp
scripts/: run_examples.bat  run_examples.sh
